--- a/firstpageportfolio/index.html
+++ b/firstpageportfolio/index.html
@@ -1,1 +1,18 @@
-<!--  -->
+<meta charset="UTF-8">
+<meta http-equiv="x-ua-compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>WDD130 | Home</title>
+<nav>
+    <a href="wwr/index.html">White Water Rafting Website</a>
+    <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
+    <a href="positioning.html">Positioning Activity</a>
+    <a href="#">Personal Website</a>
+    <a href="#">Personal Siteplan</a>
+</nav>                
+<h1>Cooper Stamps</h1>
+<img src="coopercopy.jpg" width="700px" height="500px" alt="My ID picture that my Mom took">
+<p>I am studying computer science.</p>
+<p>I love playing minecraft and skyrim.</p>
+<p>I want to learn how to make websites and have them innovative and work well as well as look good.</p>
+<p>I have been a member of The Church of Jesus Christ since I was eight years old. My family has been in the church for generations.</p>
+<p>I need constructive critisism</p>
