--- a/siteplan/past-projects.html
+++ b/siteplan/past-projects.html
@@ -7,17 +7,38 @@
 </head>
 <body>
     <header>
-        <button onclick="location.href='index.html'">Return to Main Page</button>
         <h1>Past Projects</h1>
+        <nav>
+            <a href="index.html">Return to Main Page</a>
+            <a href="please.html">Pleading</a>
+            <a href="past-projects.html">Past Projects</a>
+        </nav>
     </header>
     <main>
-        <p>Behold! A collection of my past projects that further justify my A.</p>
+        <p>Surely these projects justify an A.</p>
+        <p>These have shown me what to do and are a representation of the steps I took to get here. I hope you can see parts of each in this last project.</p>
         <div class="gallery">
-            <img src="#" alt="Project 1">
-            <img src="#" alt="Project 2">
-            <img src="#" alt="Project 3">
-            <img src="#" alt="Project 4">
+            <div class="gallery-item">
+                <img src="images/firsthaha.png" alt="Project 1">
+                <p class="caption">My First Steps</p>
+            </div>
+            <div class="gallery-item">
+                <img src="images/wiress.png" alt="Project 2">
+                <p class="caption">Learning Wireframes</p>
+            </div>
+            <div class="gallery-item">
+                <img src="images/buttony.png" alt="Project 3">
+                <p class="caption">Learning Buttons</p>
+            </div>
+            <div class="gallery-item">
+                <img src="images/Screenshot 2025-04-09 at 9.39.24 PM.png" alt="Project 4">
+                <p class="caption">Learning Images, Writing and Nav Bars</p>
+            </div>
         </div>
+        
     </main>
 </body>
+<footer>
+    <a href="site-plan.html">Site Plan</a>
+</footer>
 </html>
