--- a/siteplan/please.html
+++ b/siteplan/please.html
@@ -7,8 +7,12 @@
 </head>
 <body>
     <header>
-        <button onclick="location.href='index.html'">Return to Main Page</button>
         <h1>Please, Please, Please</h1>
+        <nav>
+            <a href="index.html">Return to Main Page</a>
+            <a href="please.html">Pleading</a>
+            <a href="past-projects.html">Past Projects</a>
+        </nav>
     </header>
     <main>
         <div class="please-container">
@@ -20,7 +24,11 @@
             <p>Puhhhlleeeaaaassseeee</p>
             <p><em>PLEEEEASE</em></p>
             <p>🙏</p>
+            <p>Please, Brother Willden and Ami, I know this might be asking a lot, but please consider giving me an A, just this once—please. I know I didn’t go to class like I should have, and I know I didn’t study, but please believe me when I say I regret it. Please understand that life got a little out of hand, and somewhere along the way, I lost track of what mattered. But I’m here now, asking—pleading—for a second chance, or at least a merciful grade that won’t totally destroy my GPA. Please know that I don’t take this lightly, and I promise that if you can just please extend this kindness, I will be forever grateful. Please?</p>
         </div>
     </main>
 </body>
+<footer>
+    <a href="site-plan.html">Site Plan</a>
+</footer>
 </html>
